# casual-advisor

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: run_briefing.py  smoke_test.py
src/financial_agent/: __init__.py  data_loader.py
src/financial_agent/evaluation/: __init__.py  evaluator.py  judge.py  result.py  rubric.py
src/financial_agent/market/: __init__.py  analyzer.py  news.py  sectors.py
src/financial_agent/models/: __init__.py  enums.py  market.py  mutual_fund.py  news.py  portfolio.py  sector.py
src/financial_agent/observability/: __init__.py  tracer.py
src/financial_agent/portfolio/: __init__.py  analytics.py
src/financial_agent/reasoning/: __init__.py  agent.py  briefing.py  chat.py  client.py  context.py  parser.py  prompts.py
tests/: conftest.py  test_phase1_market.py  test_phase1_news.py  test_phase1_sectors.py  test_phase2_allocation.py  test_phase2_pnl.py  test_phase2_risk.py  test_phase3_agent.py  test_phase3_chat.py  test_phase3_clients.py  test_phase3_context.py  test_phase3_parser.py  test_phase4_evaluation.py  test_phase4_observability.py
