[project]
name = "financial-agent"
version = "0.1.0"
description = "Autonomous Financial Advisor Chat Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.39",
    "groq>=0.11",
    "langfuse>=3.0,<4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.36",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
